force-app/main/default/objects/b3d__Comment__c/b3d__Comment__c.object-meta.xml
<CustomObject>
    <label>Comment</label>
    <nameField>
        <displayFormat>COMMENT-{0}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>