force-app/main/default/objects/b3d__Comment__c/fields/b3d__Collaborator__c.field-meta.xml
<CustomField>
    <fullName>b3d__Collaborator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborator</label>
    <referenceTo>b3d__Collaborator__c</referenceTo>
    <relationshipLabel>Comment</relationshipLabel>
    <relationshipName>Comment</relationshipName>
    <type>Lookup</type>
</CustomField>