force-app/main/default/objects/b3d__Comment__c/fields/b3d__Comment_Body__c.field-meta.xml
<CustomField>
    <fullName>b3d__Comment_Body__c</fullName>
    <label>Comment Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>