force-app/main/default/objects/b3d__Comment__c/fields/b3d__Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>b3d__Comment_Id__c</fullName>
    <label>Comment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>