force-app/main/default/objects/b3d__Comment__c/fields/b3d__Comment_Thread__c.field-meta.xml
<CustomField>
    <fullName>b3d__Comment_Thread__c</fullName>
    <label>Comment Thread</label>
    <referenceTo>b3d__Comment_Thread__c</referenceTo>
    <relationshipLabel>Comment</relationshipLabel>
    <relationshipName>Comment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>