force-app/main/default/objects/b3d__Comment__c/fields/b3d__Removed_At__c.field-meta.xml
<CustomField>
    <fullName>b3d__Removed_At__c</fullName>
    <inlineHelpText>When the comment was deleted</inlineHelpText>
    <label>Removed At</label>
    <type>DateTime</type>
</CustomField>